# router/Post.go
@@ -7,10 +7,13 @@ import (
 )
 
 func InitPostRouter(Router *gin.RouterGroup) {
-	UserRouter := Router.Group("api/v1/post")
+	PostRouter := Router.Group("api/v1/post")
 	{
-		UserRouter.POST("/create", v1.CreatePost)
-		UserRouter.POST("/comment/create", v1.CreateComment)
-		UserRouter.POST("/comment/list_all_comments", v1.ListAllComments)
+		PostRouter.POST("/create", v1.CreatePost)
+		PostRouter.POST("/comment/create", v1.CreateComment)
+		PostRouter.POST("/comment/like", v1.LikeComment)
+		PostRouter.POST("/get_post_comments", v1.GetPostComments)
+		PostRouter.POST("/get_post_tags", v1.GetPostTags)
+		PostRouter.POST("/get_all_tags", v1.GetAllTags)
 	}
 }
