# router/user.go
@@ -12,5 +12,6 @@ func InitUserRouter(Router *gin.RouterGroup) {
 		UserRouter.POST("/register", v1.Register)
 		UserRouter.POST("/login", v1.Login)
 		UserRouter.POST("/info", v1.ShowUserInfo)
+		UserRouter.POST("/test", v1.Test)
 	}
 }
